<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_label">LeaseCalcApp</string>
    <string name="settings_label">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="buttonText">Button</string>
    <string name="welcomeTitle">Welcome!</string>
    <string name="welcomeText">We see that it\'s your first time here, so we\'re going to have to set some fields.</string>
    <string name="startDateTitle">Lease Start Date</string>
    <string name="yearlyMileageTitle">Yearly Mileage Limit</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="purchaseDateLabel">Purchase Date</string>
    <string name="currentDateLabel">Current Date</string>
    <string name="timeDiffInDaysLabel">Days</string>
    <string name="timeDiffInWeeksLabel">Weeks</string>
    <string name="timeDiffInMonthsLabel">Months</string>
    <string name="timeDiffInYearsLabel">Years</string>
    <string name="mileage_units_prefs_label">Mileage Units</string>
    <string name="button_reset">Start over?</string>
    <string name="current_mileage_hint">Currently?</string>
    <string name="reset_summation">Reset</string>

</resources>