<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:id="@+id/details_left_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/purchaseDateLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/purchaseDateLabel"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/currentDateLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/currentDateLabel"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/timeDiffInDaysLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/timeDiffInDaysLabel"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/timeDiffInWeeksLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/timeDiffInWeeksLabel"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/timeDiffInMonthsLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/timeDiffInMonthsLabel"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/timeDiffInYearsLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/timeDiffInYearsLabel"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View
            android:id="@+id/details_separator_line"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#C0C0C0"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/details_right_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/purchaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/timeDiffInDays"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/timeDiffInWeeks"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/timeDiffInMonths"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/timeDiffInYears"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/target_mileage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>